see #243. Replaces root-level layout styles with state-based ones for all states except Tutorial. Acommodates full-screen bgs, see Resources. Not ready for review yet -- will fix Tutorial tonight.

--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -4,6 +4,8 @@
 @import 'common-styles/ui';
 @import 'common-styles/navAnimate';
 
+@import 'common-styles/dev/img-bg';
+
 // State styles
 @import 'states/root/root_styles';
 @import 'states/root/profiles/profiles_styles';
