--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -16,9 +16,176 @@ input, textarea {
   user-select: text;
 }
 
-// KEYFRAME ANIMATION BASE  =================================================================
-  // for some reason everything breaks when I move this out of _root_styles. Sorry!
+  .big-button {
+    height: 65px;
+    background-color: #FFECCB;
+    color: #e79b4c;
+    border: 0px solid red;
+    position: relative;
+    height: 65px;
+    width: 80px;
+    margin: 20px;
+    padding: 5px;
+    font-size: 0.90em;
+    font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    text-align: center;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+    z-index: 99;
+    border: 0;
+    display: block;
+  }
 
+
+// =================================================================
+// ROOT TEMPLATE & GRID VARS
+// =================================================================
+  $rowH: 100vh/6;
+  $rowHalf: $rowH/2;
+  $colW: 100vw/12;
+
+  $nav-btnW: 10vw; // width of left nav
+  $col-pad: 6.66vw; //
+  $navW: $nav-btnW + $col-pad; //
+
+
+// LAYOUT ----------------------------------
+
+//parent <ion-nav-view> in index.html
+#app-container {
+  position: relative;
+  display: -webkit-flex;
+  -webkit-flex-direction: row;
+  line-height: 1.7;
+  height: 100vh;
+  width: 100vw;
+  color: $grey-txtMain;
+}
+
+//parent <ion-view> in root_template
+#nav-and-content-container {
+  position: relative;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  flex-flow: row nowrap;
+}
+
+.root-ion-nav-bar {
+  display: none;
+}
+
+// <ion-nav-view> in root_template
+// this is the ROUTER CONTROLLED content container
+// it is the immediate parent of each state_template <ion-view> (class="state-contentBox")
+#content-container {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  justify-content: flex-start;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+
+// NAV CONTAINER -------------------------------------
+// All of the nav icon animations live in  'common-styles/_keyframeAni.scss'
+
+#nav-container {
+  position: absolute;
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  width: $nav-btnW; //10vw
+  height: 100vh;
+  z-index: 999;
+}
+
+.nav-container { z-index: 99; }
+
+.navTabs {
+  height: 100vh;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  color: $white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.navTab {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  background-color: $blue-main;
+  text-align: center;
+  border-radius: $roundBorder;
+  box-shadow: $itemShadow;
+  width: $nav-btnW;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  transition: width 0.5s ease-in-out;
+
+  &.active {
+    color: #53C8E9;
+    background-color: $blue-white;
+    box-shadow: $itemShadow-select;
+    z-index: 25;
+    width: $nav-btnW + 1;
+  }
+}
+
+.navTabText {
+  margin: auto;
+}
+
+.nav-svg {
+  height: 65px;
+  width: 65px;
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 5px;
+  //border: 1px solid yellow;
+}
+
+
+// ===================================================
+// GLOBAL [STATE]_TEMPLATE.HTML LAYOUT
+//===================================================
+/*
+  This section contains global styles for the state-level ion-view.
+  The ion-view.state-contentBox should always be the parent ele for each [state]_template.html.
+
+  Each ion-view.state-contentBox is injected into the root_template's ion-nav-view#content-container, which is controlled by the router and handles pg transitions and other important stuff.
+
+  At this point, these are essentially just a css reset, which creates a full-width, full-height .state-contentBox.
+
+  NOTE: Styles for everything below ion-view.state-contentBox are in the state's .scss file -- even for theme-like elements, such as layout or the  header bar. Currently each state is self-contained thing, responisble for implementing its own layout and styles.
+*/
+    .state-contentBox {
+      position: relative;
+      display: -webkit-flex;
+      -webkit-flex: 1;
+      padding: 0;
+      margin: 0;
+      height: 100vh;
+      width: 100vw;
+      font-size: 1rem;
+    }
+
+    .pane {  // i wonder what this is #?
+      flex-flow: column;
+      background-color: transparent;
+    }
+
+
+// ==================================================
+// KEYFRAME ANIMATION BASE  =================================================================
+// #hc (notes from 2016, worth revisiting)
+
+
+  // for some reason everything breaks when I move this out of _root_styles.
   .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
@@ -43,155 +210,3 @@ input, textarea {
   .animated.ng-enter.ng-enter-active {
     display: block;
   }
-
-  .big-button {
-    height: 65px;
-    background-color: #FFECCB;
-    color: #e79b4c;
-    border: 0px solid red;
-    position: relative;
-    height: 65px;
-    width: 80px;
-    margin: 20px;
-    padding: 5px;
-    font-size: 0.90em;
-    font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
-    font-weight: 800;
-    text-align: center;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-    z-index: 99;
-    border: 0;
-    display: block;
-  }
-
- // ROOT LAYOUT  =================================================================
-  //parent <ion-nav-view> in index.html
-    #app-container {
-      position: relative;
-      display: -webkit-flex;
-      -webkit-flex-direction: row;
-      line-height: 1.7;
-      height: 100vh;
-      width: 100vw;
-      color: $grey-txtMain;
-    }
-
-  //parent <ion-view> in root_template
-    #nav-and-content-container {
-      position: relative;
-      display: flex;
-      height: 100vh;
-      width: 100vw;
-      flex-flow: row nowrap;
-    }
-
-    // <ion-nav-view> in root_template
-    // this is the ROUTER CONTROLLER content container
-    // it is the immediate parent of each state_template <ion-view> (class="state-contentBox")
-    #content-container {
-      display: -webkit-flex;
-      -webkit-flex: 1;
-      -webkit-flex-direction: column;
-      justify-content: flex-start;
-      text-align: center;
-      height: 100%;
-      width: 100%;
-      border: 1px solid red; //#db
-    }
-
-
-// NAV CONTAINER -------------------------------------
-  // All of the nav icon animations live in  'common-styles/_keyframeAni.scss'
-
-  #nav-container {
-    display: -webkit-flex;
-    -webkit-flex-direction: column;
-    width: $nav-btnW; //10vw
-    height: 100vh;
-    z-index: 999;
-  }
-
-  .nav-container { z-index: 99; }
-
-  .navTabs {
-    height: $appH; //100vh;
-    display: -webkit-flex;
-    -webkit-flex: 1;
-    -webkit-flex-direction: column;
-    color: $white;
-    text-transform: uppercase;
-    font-weight: bold;
-  }
-
-  .navTab {
-    display: -webkit-flex;
-    -webkit-flex: 1;
-    background-color: $blue-main;
-    text-align: center;
-    border-radius: $roundBorder;
-    box-shadow: $itemShadow; //1px 0px 2px #d3d3d3;
-    width: $nav-btnW; //100px;
-    padding-top: 10%;
-    padding-bottom: 5%;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    transition: width 0.5s ease-in-out; // #hc animation
-
-    &.active {
-      color: #53C8E9;
-      background-color: $blue-white;
-      box-shadow: $itemShadow-select; //2px 1px 2px #d1d1d1;
-      z-index: 25;
-      width: $nav-btnW + 1; //~110px
-    }
-  }
-
-  .navTabText {
-    margin: auto;
-  }
-
-  .nav-svg {
-    height: 65px; //~61%
-    width: 65px; //~61%
-    display: block;
-    margin: 0 auto;
-    padding-bottom: 5px;
-    //border: 1px solid yellow;
-  }
-
-
-// GLOBAL [STATE]_TEMPLATE.HTML LAYOUT ===================================================
-  /* The <ion-view> for each [state]_template.html should be the direct descendant of #content-container
-     This section contains global styles for the state-level ion-view. Any individual styles for each state should go in ion-view.state-contentBox's direct descendant and should be styled in the state's .scss file
-  */
-    .state-contentBox {
-      padding: 0; // reset
-      margin: 0; // reset
-
-      display: -webkit-flex;
-      -webkit-flex: 1;
-      margin-top: $rowHalf;
-      margin-left: $navW;
-      height: auto;
-      width: $appW - $navW - $col-pad;
-      font-size: 1rem;
-      //border: 1px solid $blue-light;
-    }
-
-    .state-contentBox--wide {  // used in tutorial for full width graphics
-      @extend .state-contentBox;
-      margin-left: 0;
-      padding: 0;
-      width: $appW;
-    }
-
-    .pane {  // what is this #?
-      flex-flow: column;
-      background-color: transparent;
-    }
-
-    canvas {
-      background-color: transparent;
-      // box-shadow #hc
-      // rounded corners #hc
-    }
