--- a/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
+++ b/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
@@ -1,7 +1,7 @@
 .sandbarBox {
 	position: relative;
 	height: $rowH * 2;
-	width: $appW;
+	width: 100%;
 	top: $rowH * 4;
 	display: flex;
 	flex-direction: column;
@@ -20,7 +20,7 @@
 	flex-wrap: nowrap;
 	height: 100%;
 	margin-left: $navW;
-	width: $appW - $navW - $col-pad;
+	width: 100vw - $navW - $col-pad;
 	z-index: 25;
 	//border: 1px solid orange;
 }
@@ -50,7 +50,7 @@ div.sandbar-coinImgBox {
 }
 
 .sandbar-coinTxt {
-	margin-top: 0px; 
+	margin-top: 0px;
 	//font-weight: bold;
 
 }
