--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -1,11 +1,58 @@
-// parent ele for all the quest content
+// base layout
 .quest-contentBox {
-	//border: 1px solid violet;
+	position: relative;
 	display: flex;
-	height: 95%;
-	flex-direction: column;
-	justify-content: space-around;
+	width: 100vw;
+	height: 100vh;
+
+
+	.quest-ion-nav-bar {
+		.bar-header { // styles <ion-header-bar>
+		  background-color: $blue-light;
+		  height: $rowH !important; //iOS cordova will overwrite this if not !important
+		  display: flex;
+		  align-items: center;
+		  box-shadow: $itemShadow;
+		  padding-left: $navW;
+
+		  .title { // // styles .title w/in <ion-header-bar>
+		    position: relative;
+		    display: block;
+		    text-transform: uppercase;
+		    color: $blue-main;
+		    font-weight: bold;
+		    font-size: $header-type;
+		    line-height: 0;
+		    padding-top: 10px;
+		    text-align: left;
+		    overflow: visible;
+		  } //end .title
+		} // end .bar-header
+	} // end profiles-ion-nav-bar
+
+	.quest-bg {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+	}
+
+	.quest-layout {
+		margin-top: $rowH * 1.5;
+		margin-left: $navW;
+		height: $rowH * 4;
+		width: $colW * 9;
+		flex-flow: column nowrap;
+		justify-content: space-around;
+		display: flex;
+		z-index: 10;
+		// border: 1px solid cyan;
+	}
 }
+
+// ================================================
+// STATE STYLES
+// ================================================
 
 .words-progress-indicator {
 	display: inline-block;
@@ -95,6 +142,6 @@
     color: #808080;
     z-index: 100000;
     position: absolute;
-    top: 0;
+    top: $rowH;
     padding: 10px;
 }
