--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -4,18 +4,16 @@
 	display: flex;
 	width: 100vw;
 	height: 100vh;
+	//background-color: $c-bg; //#2018
 
 	.profiles-ion-nav-bar {
 		.bar-header { // styles <ion-header-bar>
 		  background-color: $blue-light;
-		  //height-min: 106px; //iOS cordova will overwrite this
-		  height: $rowH !important; //iOS cordova will overwrite this if not !important
+		  height: $row-h !important;
 		  display: flex;
-		  align-items: center; // vertical align, but doesn't work w/ iOS cordova
-		  //justify-content: space-between;
+		  align-items: center;
 		  box-shadow: $itemShadow;
 		  padding-left: $navW;
-		  //border: 1px solid red; //#db
 
 		  .title { // // styles .title w/in <ion-header-bar>
 		    position: relative;
@@ -24,8 +22,8 @@
 		    color: $blue-main;
 		    font-weight: bold;
 		    font-size: $header-type;
-		    line-height: 0; // this adjusts for weird iOS stuff
-		    padding-top: 10px; // also adjusts for weird iOS styling
+		    line-height: 0;
+		    padding-top: 10px;
 		    text-align: left;
 		    overflow: visible;
 		  } //end .title
@@ -34,18 +32,21 @@
 
 	.profiles-bg {
 		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
 		height: 100%;
 		z-index: 1;
 	}
 
 	.profiles-layout {
-		margin-top: $rowH * 1.5;
-		margin-left: $navW;
-		height: $rowH * 5;
-		width: $colW * 9;
-		flex-flow: row nowrap;
+		position: relative;
 		display: flex;
+		flex-flow: row nowrap;
+		margin-top: $row-h * 1.5;
+		margin-left: $navW;
+		height: $row-h * 5;
+		width: $col-w * 9;
 		z-index: 10;
 		// border: 1px solid cyan;
 	}
@@ -54,9 +55,7 @@
 // ================================================
 // STATE STYLES
 // ================================================
-.logout {
-
-}
+.logout {}
 
 p.display-name {
 	margin-bottom: 0px;
