--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -9,7 +9,7 @@
 	.resources-ion-nav-bar {
 		.bar-header { // styles <ion-header-bar>
 		  background-color: $blue-light;
-		  height: $rowH !important;
+		  height: $row-h !important;
 		  display: flex;
 		  align-items: center;
 		  box-shadow: $itemShadow;
@@ -23,30 +23,32 @@
 		    font-weight: bold;
 		    font-size: $header-type;
 		    line-height: 0; // this adjusts for weird iOS stuff
-		    padding-top: 10px; // also adjusts for weird iOS styling
+		    padding-top: 10px;
 		    text-align: left;
 		    overflow: visible;
 		  } //end .title
 		} // end .bar-header
 	} // end profiles-ion-nav-bar
 
-	.resources-bg {
+	.quest-bg {
 		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
 		height: 100%;
 		z-index: 1;
-		// border: 1px solid cyan;
 	}
 
 	.resources-layout {
-		margin-top: $rowH * 1.5;
-		margin-left: $navW;
-		height: $rowH * 4;
-		width: $colW * 9;
+		position: relative;
+		display: flex;
 		flex-flow: column nowrap;
+		margin-top: $row-h * 1.5;
+		margin-left: $navW;
+		height: $row-h * 4;
+		width: $col-w * 9;
     justify-content: space-between;
     align-items: center;
-		display: flex;
 		z-index: 10;
 		// border: 1px solid cyan;
 	}
