--- a/staRt/www/common-styles/_variables.scss
+++ b/staRt/www/common-styles/_variables.scss
@@ -2,8 +2,12 @@
 
 // 2018 COLORS -------------------------------
 
-$c-bg: #c2f2f2; //sky blue
+//text
 $c-text-main: #3D6D84; //navy blue
+$c-text-subtle: #7ab5b8;
+
+// eles
+$c-bg: #c2f2f2; //sky blue
 
 $c-gold-400: #ffd576;
 $c-gold-500: #ffc95f; // main gold
