--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -84,12 +84,11 @@
 }
 
 .words-word {
-	font-size: 3rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	line-height: 1.5;
+  font-size: 3.5em;
+	line-height: 1em;
 	display: inline-block;
-	vertical-align: middle;
+  vertical-align: middle;
+  color: #3D6D84;
 }
 
 .quest-contentBox button[disabled] {
