See 239 -- wip but at least hte LPC has a transparent background now

--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -44,10 +44,10 @@
 		position: relative;
 		display: flex;
 		flex-flow: column nowrap;
-		margin-top: $row-h * 1.5;
-		margin-left: $navW;
-		height: $row-h * 4;
-		width: $col-w * 9;
+		margin-top: $row-h;
+		margin-left: $nav-btnW;
+		height: 100%;
+		width: 100%;
 		justify-content: space-around;
 		z-index: 10;
 		// border: 1px solid cyan;
