--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -4,7 +4,7 @@ lpc-directive {
 	margin: auto;
 	flex-flow: column;
 	width: 100%;
-	height: 100%;
+  height: 100%;
 }
 
 // This is the THREEjs element.
@@ -59,7 +59,13 @@ lpc-directive {
 	background-color: #F0F9FC;
 	border: 15px solid #F0F9FC;
 	border-bottom: 25px solid #F0F9FC;
-	box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
+
+  &.transparent-background {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+  }
 }
 
 .slider-and-canvas {
