--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1189,10 +1189,10 @@ div.needleBox {
     position: relative;
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 25vh;
-    margin-left: 16.66vw;
-    height: 66.66667vh;
-    width: 75vw;
+    margin-top: 16.66667vh;
+    margin-left: 10vw;
+    height: 100%;
+    width: 100%;
     justify-content: space-around;
     z-index: 10; }
 
@@ -1435,6 +1435,10 @@ lpc-directive {
   border: 15px solid #F0F9FC;
   border-bottom: 25px solid #F0F9FC;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15); }
+  .lpc-container.transparent-background {
+    background-color: transparent;
+    border: none;
+    box-shadow: none; }
 
 .slider-and-canvas {
   display: inline-block;
