--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -2,9 +2,10 @@ lpc-directive {
 	display: -webkit-flex;
 	-webkit-flex: 1;
 	margin: auto;
-	flex-flow: column;
+	flex-flow: row;
 	width: 100%;
   height: 100%;
+  justify-content: space-around;
 }
 
 // This is the THREEjs element.
