See #238 and #239 -- Buttons have been positioned and styled. Now it's a question of adding feedback when you press them

--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -51,7 +51,11 @@
     align-items: center;
 		z-index: 10;
 		// border: 1px solid cyan;
-	}
+  }
+
+  .free-lpcBox {
+    width: 100%;
+  }
 }
 
 // ================================================
